kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pms
  labels:
    name: pms
    environment: production
